@@ -10,9 +10,7 @@ import logging
 from logging import handlers
 import time
 import os
-import sys
 import socket
-import stat
 try:
     from ConfigParser import RawConfigParser, Error
 except ImportError:
@@ -87,49 +85,9 @@ if method == 'file':
 
     if rotation == 'timed':
 
-        class TimedRotatingFileHandler(handlers.TimedRotatingFileHandler):
-            """Store log creation time in a stand-alone file''s mtime"""
-            def __init__(self, *args, **kwargs):
-                handlers.TimedRotatingFileHandler.__init__(self, *args, **kwargs)
-
-                try:
-                    timestamp = os.stat(self.__filename)[stat.ST_MTIME]
-
-                except IOError:
-                    return
-
-                # Use a stand-aside file metadata time instead of the last
-                # modification of the log file itself, as the stock
-                # implementation does.
-                # This is to work-around the increasing rotation intervals
-                # on process restart.
-                self.rolloverAt = self.computeRollover(timestamp)
-
-            @property
-            def __filename(self):
-                return os.path.join(
-                    os.path.dirname(self.baseFilename),
-                    '.' + os.path.basename(self.baseFilename) + '-timestamp'
-                )
-
-            def doRollover(self):
-                handlers.TimedRotatingFileHandler.doRollover(self)
-
-                try:
-                    # note log file creation time
-                    if os.path.exists(self.__filename):
-                        os.unlink(self.__filename)
-
-                    open(self.__filename, 'w').close()
-
-                except IOError:
-                    logger.warning('Failed to update timestamp file %s: %s' % (self.__filename, sys.exc_info()[1]))
-                    pass
-
-
         filename = config.get('file', 'destination')
 
-        handler = TimedRotatingFileHandler(
+        handler = log.FileLogger.TimedRotatingFileHandler(
             filename,
             config.get('file', 'timescale'),
             int(config.get('file', 'interval')),
